# particular

./: .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  first_encounter.md
.github/workflows/: ci.yml
apps/web/: package.json
apps/web/public/: app.css  app.js  index.html  sequencer.js
apps/web/tests/: app.test.js  browser-smoke.md  sequencer.test.js
docs/architecture/: 0001-system-boundaries.md  0002-reduction-only-tiers.md  0003-pilot-authorization-model.md  supported-musicxml.md
docs/plans/: 2026-07-18-001-feat-particular-mvp-plan.md
docs/product/: design-partner-criteria.md  difficulty-model.md  interview-guide.md  problem-validation.md  research-consent.md  rights-and-privacy.md  security-and-authorization.md
docs/provenance/: codex-authorship-boundary.md  post-boundary-work.md
evaluation/: __init__.py
evaluation/corpus/: manifest.yaml
evaluation/corpus/intake/: README.md
evaluation/fixtures/: brandenburg-no3-mvt3-excerpt.musicxml  mixed-ensemble-transposition.musicxml  string-orchestra-second-violin.musicxml
evaluation/results/reviews/: README.md
evaluation/rubrics/: arrangement-review.md  review.schema.json
evaluation/scripts/: __init__.py  validate_corpus.py
infrastructure/: wheel_smoke.py
services/arranger/particular/: __init__.py  application.py  cli.py  demo.py  errors.py  preflight.py
(+38 files in other folders)
