[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "particular-arranger"
version = "0.0.0"
description = "Deterministic arranging engine for Particular"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["services/arranger/particular"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["services", "evaluation"]

[tool.pytest.ini_options]
testpaths = ["services/arranger/tests", "evaluation"]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
